--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Toyota Mailer</title>
+        <title>Valentines day Emailer</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -65,49 +65,14 @@
         </style>
     </head>
     <body style="margin:0 !important; padding:0 !important;">
-        <table cellpadding="0" cellspacing="0" width="600" align="center" style="border-collapse:collapse;">
+        <table cellpadding="0" cellspacing="0" width="700" align="center" style="border-collapse:collapse;">
                 <tr>
-                    <td align="center" valign="top" style="font-size:0px; font-family:Helvetica,Arial,sans-serif; color:#03276a;background-color:#080b23;">
-                        <img src="img/img1.jpg" alt="Toyota Mailer" width="600" height="1465" border="0" style="width:600px; height:1465px;">
+                    <td align="center" valign="top" style="font-size:0px; font-family:Helvetica,Arial,sans-serif; color:#03276a;">
+                        <a href="https://www.bengaluruairport.com/travellers/at-the-airport/quad-by-blr/valentines-day-at-blr-airport-.html" target="_blank" title="ClickToKnowMore">
+                        <img src="img.jpg" alt="ValentinesDay" width="700" height="989" border="0" style="width:700px; height:989px;"></a>
                     </td>
                 </tr>
-                <tr>
-                    <td align="center" valign="top" style="font-size:0px; font-family:Helvetica,Arial,sans-serif; color:#03276a;background-color:#080b23;">
-                        <a href="https://www.toyotabharat.com/online-booking/?model-id=15" target="_blank" title="eBook Now">
-                        <img src="img/img2.jpg" alt="Toyota Mailer" width="600" height="75" border="0" style="width:600px; height:75px;"></a>
-                    </td>
-                </tr>
-                <tr>
-                    <td align="center" valign="top" width="600" bgcolor="#000">
-                        <table align="center" width="100%" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;">
-                            <tr>
-                                <td>
-                                    <img src="img/img3.jpg" alt="Toyota Mailer" width="340" height="77" border="0" style="display:block; width:340px; height:"77px;>
-                                </td>
-                                <td>
-                                    <a href="https://www.facebook.com/ToyotaIndia" target="_blank" title="Facebook">
-                                    <img src="img/img4.jpg" alt="Toyota Mailer" width="40" height="77" border="0" style="display:block; width:40px; height:"77px;></a>
-                                </td>
-                                <td>
-                                    <a href="https://www.youtube.com/user/ToyotainIndia" target="_blank" title="Youtube">
-                                    <img src="img/img5.jpg" alt="Toyota Mailer" width="50" height="77" border="0" style="display:block; width:50px; height:"77px;></a>
-                                </td>
-                                <td>
-                                    <a href="https://www.instagram.com/toyota.india/" target="_blank" title="Instagram">
-                                    <img src="img/img6.jpg" alt="Toyota Mailer" width="55" height="77" border="0" style="display:block; width:55px; height:"77px;></a>
-                                </td>
-                                <td>
-                                    <a href="https://api.whatsapp.com/send?phone=914071781588&text=Hi&source=&data=&app_absent=" target="_blank" title="whatsapp">
-                                    <img src="img/img7.jpg" alt="Toyota Mailer" width="50" height="77" border="0" style="display:block; width:50px; height:"77px;></a>
-                                </td>
-                                <td>
-                                    <a href="https://twitter.com/Toyota_India" target="_blank" title="Twitter">
-                                    <img src="img/img8.jpg" alt="Toyota Mailer" width="65" height="77" border="0" style="display:block; width:65px; height:"77px;></a>
-                                </td>
-                            </tr>
-                        </table>
-                    </td>
-                </tr>
+                
         </table>
 
     </body>
